# aiverse-platform-data-fabric

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
catalog/: __init__.py  namespacing.py  tagging.py
dashboards/: observability_config.json
docs/: CAPABILITY-SPEC-DOWNSTREAM.md
execution_units/: __init__.py  eu_01_data_asset_registrar.py  eu_02_connection_probe.py  eu_03_schema_introspector.py  eu_04_data_extractor.py  eu_05_data_writer.py  eu_06_transform_executor.py  eu_07_data_joiner.py  eu_08_aggregation_computer.py  eu_09_feature_computer.py  eu_10_feature_store_writer.py  eu_11_feature_retriever.py  eu_12_data_profiler.py  eu_13_schema_validator.py  eu_14_data_committer.py  eu_15_branch_creator.py  eu_16_merge_computer.py  eu_17_data_replicator.py  eu_18_locality_signal_generator.py  eu_19_label_task_creator.py  eu_20_label_recorder.py  eu_21_lineage_edge_writer.py  eu_22_quality_gate_evaluator.py
feedback_signals/: advisor_data_freshness.json  advisor_labeling_capacity.json  advisor_locality_placement.json  metric_data_ingestion_volume.json  metric_feature_materialization_latency.json  metric_lineage_graph_growth.json  metric_transformation_throughput.json  outcome_connection_health.json  outcome_data_quality_gate.json  outcome_schema_validation.json
integration/: __init__.py
policies/: __init__.py  drift_control.py
registry_cards/: eu_01_data_asset_registrar_card.json  eu_02_connection_probe_card.json  eu_03_schema_introspector_card.json  eu_04_data_extractor_card.json  eu_05_data_writer_card.json  (+17 more)
(+18 files in other folders)
